[package]
name = "console-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
urlencoding = "2.1"
keyring = "2.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
